laying out HTML structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,59 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-	<title>Nathaniel Bannister</title>
+	<title>My dad's portfolio</title>
 </head>
 
 <body>
+
+  <header>
+  	<h1>MY DAD'S PORTFOLIO</h1>
+  </header>
+
+  <nav>
+  	<ul>
+  	  <li>ABOUT MY DAD</li>
+  	  <li>MY DAD'S WORK</li>
+  	  <li>ABOUT ME (RALPH)</li>
+  	  <li>CONTACT MY DAD</li>
+  	</ul>
+  </nav>
+
+  <section id="about-my-dad">
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>
+  </section>
+
+  <section id="my-dads-work">
+  	<h2>MY DAD'S WORK</h2>
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>
+  </section>
+
+  <section id="about-me-ralph">
+    <h2>ABOUT ME (RALPH)</h2>
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>
+  </section>
+
+  <footer>
+    <h2>CONTACT MY DAD</h2>
+  	<img>
+  	<p></p>
+  	<img>
+  	<p></p>	
+  </footer>
+
 </body>
 
 </html>
