--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300|Oswald:600&display=swap" rel="stylesheet">
 	<title>My dad's portfolio</title>
 </head>
 
@@ -24,7 +26,7 @@
 
   <section id="about-my-dad">
   	<img>
-  	<p></p>
+  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat. Aliquam egestas, velit at condimentum placerat, sem sapien laoreet mauris, dictum porttitor lacus est nec enim. Vivamus feugiat elit lorem, eu porttitor ante ultrices id. Phasellus suscipit tellus ante, nec dignissim elit imperdiet nec. Nullam fringilla feugiat nisl. Ut pretium, metus venenatis dictum viverra, dui metus finibus enim, ac rhoncus sem lorem vitae mauris. Suspendisse ut venenatis libero. Suspendisse lorem felis, pretium in maximus id, tempor non ipsum</p>
   	<img>
   	<p></p>
   </section>
@@ -51,10 +53,12 @@
 
   <footer>
     <h2>CONTACT MY DAD</h2>
-  	<img>
-  	<p></p>
-  	<img>
-  	<p></p>	
+  	<a href="mailto:bannister.nathaniel@gmail.com">
+  	  <i class="fa fa-envelope fa-2x"></i>
+  	</a>
+  	<a href="https://www.linkedin.com/in/nathanielbannister/">
+  	  <i class="fa fa-linkedin fa-2x"></i>
+  	</a>
   </footer>
 
 </body>
