update html and css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <nav>
   	<ul>
-  	  <li>ABOUT MY DAD</li>
-  	  <li>MY DAD'S WORK</li>
-  	  <li>ABOUT ME (RALPH)</li>
-  	  <li>CONTACT MY DAD</li>
+  	  <a href="#about-my-dad"><li>ABOUT MY DAD</li></a>
+  	  <a href="#my-dads-work"><li>MY DAD'S WORK</li></a>
+  	  <a href="#about-me-ralph"><li>ABOUT ME (RALPH)</li></a>
+  	  <a href="#contact-my-dad"><li>CONTACT MY DAD</li></a>
   	</ul>
   </nav>
 
@@ -51,7 +51,7 @@
   	<p></p>
   </section>
 
-  <footer>
+  <footer id="contact-my-dad">
     <h2>CONTACT MY DAD</h2>
   	<a href="mailto:bannister.nathaniel@gmail.com">
   	  <i class="fa fa-envelope fa-2x"></i>
