--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300|Oswald:600&display=swap" rel="stylesheet">
 	<title>My dad's portfolio</title>
 </head>
 
@@ -25,30 +24,42 @@
   </nav>
 
   <section id="about-my-dad">
-  	<img>
-  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat. Aliquam egestas, velit at condimentum placerat, sem sapien laoreet mauris, dictum porttitor lacus est nec enim. Vivamus feugiat elit lorem, eu porttitor ante ultrices id. Phasellus suscipit tellus ante, nec dignissim elit imperdiet nec. Nullam fringilla feugiat nisl. Ut pretium, metus venenatis dictum viverra, dui metus finibus enim, ac rhoncus sem lorem vitae mauris. Suspendisse ut venenatis libero. Suspendisse lorem felis, pretium in maximus id, tempor non ipsum</p>
-  	<img>
-  	<p></p>
+  	<img src="http://via.placeholder.com/400" alt="">
+  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat.</p>
+  	<img src="http://via.placeholder.com/400" alt="">
+  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat.</p>
   </section>
 
   <section id="my-dads-work">
   	<h2>MY DAD'S WORK</h2>
-  	<img>
-  	<p></p>
-  	<img>
-  	<p></p>
-  	<img>
-  	<p></p>
+  	<a href="https://www.google.com" target="blank">
+      <img src="http://via.placeholder.com/300" alt="">
+  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </a>
+    <a href="https://www.google.com" target="blank">
+  	  <img src="http://via.placeholder.com/300" alt="">
+  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </a>
+    <a href="https://www.google.com" target="blank">
+  	  <img src="http://via.placeholder.com/300" alt="">
+  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </a>
   </section>
 
   <section id="about-me-ralph">
     <h2>ABOUT ME (RALPH)</h2>
-  	<img>
-  	<p></p>
-  	<img>
-  	<p></p>
-  	<img>
-  	<p></p>
+  	<img src="http://via.placeholder.com/150x200" alt="">
+  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  	<img src="http://via.placeholder.com/150x200" alt="">
+  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  	<img src="http://via.placeholder.com/150x200" alt="">
+  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="">
+    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="">
+    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="">
+    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </section>
 
   <footer id="contact-my-dad">
