--- a/index.html
+++ b/index.html
@@ -24,42 +24,36 @@
   </nav>
 
   <section id="about-my-dad">
-  	<img src="http://via.placeholder.com/400" alt="" id="about-my-dad-grid-item-a">
+  	<img src="http://via.placeholder.com/400" alt="" id="about-my-dad-grid-item-a" class="grid-image">
   	<p id="about-my-dad-grid-item-b">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat.</p>
     <p id="about-my-dad-grid-item-c">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat.</p>
-  	<img src="http://via.placeholder.com/400" alt="" id="about-my-dad-grid-item-d">
+  	<img src="http://via.placeholder.com/400" alt="" id="about-my-dad-grid-item-d" class="grid-image">
   </section>
 
+  <h2>MY DAD'S WORK</h2>
   <section id="my-dads-work">
-  	<h2>MY DAD'S WORK</h2>
-  	<a href="https://www.google.com" target="blank">
-      <img src="http://via.placeholder.com/300" alt="">
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </a>
-    <a href="https://www.google.com" target="blank">
-  	  <img src="http://via.placeholder.com/300" alt="">
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </a>
-    <a href="https://www.google.com" target="blank">
-  	  <img src="http://via.placeholder.com/300" alt="">
-  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </a>
+  	<a href="https://www.google.com" target="blank"><img src="http://via.placeholder.com/300" alt="" class="grid-image"></a>
+    <a href="https://www.google.com" target="blank"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></a>
+    <a href="https://www.google.com" target="blank"><img src="http://via.placeholder.com/300" alt="" class="grid-image"></a>
+  	<a href="https://www.google.com" target="blank"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></a>
+    <a href="https://www.google.com" target="blank"><img src="http://via.placeholder.com/300" alt="" class="grid-image"></a>
+  	<a href="https://www.google.com" target="blank"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></a>
   </section>
 
+  <h2>ABOUT ME (RALPH)</h2>
   <section id="about-me-ralph">
-    <h2>ABOUT ME (RALPH)</h2>
-  	<img src="http://via.placeholder.com/150x200" alt="">
-  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  	<img src="http://via.placeholder.com/150x200" alt="">
-  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  	<img src="http://via.placeholder.com/150x200" alt="">
-  	<p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="http://via.placeholder.com/150x200" alt="">
-    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="http://via.placeholder.com/150x200" alt="">
-    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="http://via.placeholder.com/150x200" alt="">
-    <p>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  	<img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-a">
+  	<p id="about-me-ralph-grid-item-b">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  	<img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-c">
+  	<p id="about-me-ralph-grid-item-d">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  	<img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-e">
+  	<p id="about-me-ralph-grid-item-f">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-g">
+    <p id="about-me-ralph-grid-item-h">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-i">
+    <p id="about-me-ralph-grid-item-j">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="http://via.placeholder.com/150x200" alt="" class="grid-image" id="about-me-ralph-grid-item-k">
+    <p id="about-me-ralph-grid-item-l">Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </section>
 
   <footer id="contact-my-dad">
